# iphone-checker

./: .gitignore  AUTHORS  ChangeLog  README.md  iphone_checker.py  requirements.txt  setup.cfg  setup.py
iphone_checker/: __init__.py  api.py  iphone_checker.py  utils.py
