[metadata]
name = iphone-checker
author = Anthony Fox
author-email = anthonyfox1988@gmail.com 
summary = Check nearby Apple stores for iPhone X availability
license = MIT
description-file =
    README.md
home-page = https://github.com/WTFox/iphone-checker
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = 
    iphone
    apple
[files]
packages =
    iphone_checker
[entry_points]
console_scripts =
    checkx = iphone_checker:check_x
